--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "gsap": "^2.1.3",
     "normalize.css": "^8.0.1",
     "normalize.scss": "^0.1.0",
     "particles.js": "^2.0.0",
