--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.conf.js",
-    "build": "webpack --config webpack.prod.conf.js"
+    "build": "rm -rf dist && webpack --config webpack.prod.conf.js"
   },
   "author": "",
   "browserslist": [
