--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "gsap": "^2.1.3",
+    "lodash": "^4.17.15",
     "normalize.css": "^8.0.1",
     "normalize.scss": "^0.1.0",
     "particles.js": "^2.0.0",
