--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.conf.js",
-    "build": "rm -rf dist && webpack --config webpack.prod.conf.js"
+    "build": "webpack --config webpack.prod.conf.js"
   },
   "author": "",
   "browserslist": [
@@ -24,7 +24,6 @@
     "cssnano": "^4.1.10",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "path": "^0.12.7",
@@ -35,7 +34,9 @@
     "style-loader": "^1.0.0",
     "svg-sprite-loader": "^4.1.6",
     "svgo-loader": "^2.2.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.40.2",
+    "webpack-bundle-analyzer": "^3.5.0",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0",
     "webpack-merge": "^4.2.2"
