--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.conf.js",
-    "build": "webpack --config webpack.prod.conf.js"
+    "build": "rimraf dist && webpack --config webpack.prod.conf.js"
   },
   "author": "",
   "browserslist": [
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "gsap": "^2.1.3",
+    "handlebars": "^4.4.5",
     "lodash": "^4.17.15",
     "normalize.css": "^8.0.1",
     "normalize.scss": "^0.1.0",
