--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "gsap": "^2.1.3",
     "handlebars": "^4.4.5",
     "lodash": "^4.17.15",
