--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss": "^7.0.18",
     "postcss-combine-duplicated-selectors": "^8.0.2",
     "postcss-loader": "^3.0.0",
+    "rimraf": "^3.0.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "svg-sprite-loader": "^4.1.6",
@@ -44,10 +45,7 @@
   },
   "dependencies": {
     "animate.css": "^3.7.2",
-    "gsap": "^2.1.3",
     "handlebars": "^4.4.5",
-    "lodash": "^4.17.15",
-    "normalize.css": "^8.0.1",
     "normalize.scss": "^0.1.0",
     "particles.js": "^2.0.0",
     "sass-rem": "^2.0.1",
